From twitter to X

--- a/_lsb/014.md
+++ b/_lsb/014.md
@@ -13,7 +13,6 @@ rephrase a sentence in the Remediation section and give a link to the patch.
 
 **Please read our [support article](https://support.ledger.com/hc/en-us/articles/360015738179) if you aren't interested in technical details.**
 
-
 ## Summary
 
 The Ledger Nano S and Nano X are [Hierarchical Deterministic](#4) (HD) wallets,
@@ -26,7 +25,6 @@ For instance, the Zcoin app cannot derive keys on the Dogecoin derivation path
 This path restriction was not enforced for the Bitcoin app and most of its
 derivatives, allowing a Bitcoin derivative (eg. Litecoin) to derive public keys
 or sign Bitcoin transactions.
-
 
 ## Technical Analysis
 
@@ -43,7 +41,6 @@ APPNAME = "Monero"
 This parameter is enforced by the OS when any app retrieves a key used for
 public key derivation and transaction signature (using syscall
 `os_perso_derive_node_bip32`).
-
 
 This parameter is however [empty](#3) in the Bitcoin app and in its derivatives
 (at the exception of Qtum). The following table presents the coins affected by
@@ -102,7 +99,6 @@ up:
 - "GA'/" (`18941'/`) - GreenAddress proprietary for the shared multisignature address
 - Users can also sign on randomly selected paths with PSBT (Partially Signed Bitcoin Transaction from BIP 174)
 
-
 ## Remediation
 
 Blocking unusual paths from Bitcoin derivatives apps could fix the issue, but it
@@ -120,16 +116,15 @@ wallets.
 The vulnerability is fixed from version 1.4.6 of the Bitcoin app (being used as
 a library by the other apps) thanks to the commit [3f85053e](#5).
 
-
 ## Disclosure timeline
 
 | Date                     | Action                                                          |
 |--------------------------|-----------------------------------------------------------------|
-| 2020-05-02               | monokh sent to bounty@ledger.fr a vulnerability report about app isolation bypass. |
+| 2020-05-02               | monokh sent to <bounty@ledger.fr> a vulnerability report about app isolation bypass. |
 | 2020-05-04               | Ledger's security team acknowledged the reception and starts investigating. |
 | 2020-05-10 to 2020-05-13 | monokh and the Ledger security team discussed the issue. Ledger's security team started coordinating other Ledger teams to fix it. A disclosure date is being set to 90 days (that is, 2020-08-02). |
 | 2020-08-02               | 90 days deadline reached. Ledger started the test and release process for the fixed Bitcoin app. |
-| 2020-08-04               | monokh published the details of the vulnerability, without informing Ledger's security team beforehand through bounty@ledger.fr. |
+| 2020-08-04               | monokh published the details of the vulnerability, without informing Ledger's security team beforehand through <bounty@ledger.fr>. |
 | 2020-08-05               | Ledger updated the Bitcoin app. |
 
 In this case, we regret not having respected the disclosure deadline, leading
@@ -143,16 +138,14 @@ published after the scheduled deadline (that was set to 90 days after the
 vulnerability report).
 
 Miscommunication didn't help solving that issue sooner. The reporter sent
-Twitter DM messages that were missed by most of the security engineers. Indeed,
-the bounty@ledger.fr email address is the only way to reach the whole security
+X DM messages that were missed by most of the security engineers. Indeed,
+the <bounty@ledger.fr> email address is the only way to reach the whole security
 team.
-
 
 ## Credits
 
 We would like to thank the security researcher monokh who reported the
 vulnerability through our bug bounty program.
-
 
 ## References
 
