--- a/_lsb/017.md
+++ b/_lsb/017.md
@@ -92,7 +92,7 @@ As these products are discontinued, and the attack scenario is outside of the se
 
 ## Credits
 
-We would like to thank the security researcher [Niv Yehezkel](https://twitter.com/invlpgtbl) from Hexagate who discovered the vulnerability and reported it through our bug bounty program.
+We would like to thank the security researcher [Niv Yehezkel](https://x.com/invlpgtbl) from Hexagate who discovered the vulnerability and reported it through our bug bounty program.
 
 ## References
 
