fix: url use relative path

--- a/src/content/lsb/017.md
+++ b/src/content/lsb/017.md
@@ -22,11 +22,11 @@ The keycard used by older Ledger wallets is an authentication mechanism between 
 
 The Nano and HW.1 hardware wallets were sold with a keycard, and a security card. This security card contained a QR code with 16 bytes to reset the keycard mechanism on the device.
 
-![Ledger HW.1 security card](/lsb/hw1-qrcode.jpg)
+![Ledger HW.1 security card](./hw1-qrcode.jpg)
 
 The keycard is a card on which there is a mapping between a base 58 alphabet and an hexadecimal digit:
 
-![Ledger HW.1 keycard](/lsb/hw1-keycard.jpg)
+![Ledger HW.1 keycard](./hw1-keycard.jpg)
 
 During each sensitive operation, such as signing a transaction, the device generates a challenge to which the user must respond using his keycard. This is a sequence of characters (up to 10) taken from the destination address.
 
