Refine LSB 021 impact sentence
Replace the mixed-language line with a concise English statement.

--- a/src/content/lsb/021.md
+++ b/src/content/lsb/021.md
@@ -11,7 +11,7 @@ summary: Missing parameter validation during MCU firmware update
 A  vulnerability was identified in the firmware update process, allowing an attacker to set an arbitrary `reset_handler` address during firmware flashing. The absence of validation lead to permanently **bricking the device**.
 
 
-L'impact est limité à l'opérabilité du device et bien entendu,  Client funds have never been at risk.
+The impact is limited to device operability. Client funds have never been at risk.
 
 ---
 
